--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -15,7 +15,7 @@
             height: 80vh;
             width: 50vw;
             text-align: center;
-            max-width: 30vw;
+            max-width: 500px;
             //shadow
             box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
             display: flex;
@@ -58,15 +58,19 @@
             }
     }
     //For <768 px screen
-    //make the login-paper margin smaller
+    //make the login-container bigger
+
 
     @media screen and (max-width: 768px){
+        
+        
         #login-paper{
             margin: 10px;
-            width: auto;
+            width: 70vw;
             h1{
                 font-size: 2.4rem;
             }
         }
+        
     }
 }
