--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -21,7 +21,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: space-evenly;
             h1{
                 font-size: 3.6rem;
                 font-weight: bold;
