--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,19 +3,13 @@
 .topBar{
     width: 100%;
     height: 90px;
-    //transparency bakground
-    background-color: rgba(78, 61, 61, 0.9);
-    position: fixed;
-    top: 0;
-    z-index: 3;
-    color: rgb(248, 248, 248);
-    overflow:hidden;
-    transition: all 0.3s ease-in-out;
+    background-color: rgb(204, 204, 204);
+    color: rgb(0, 0, 0);
     .wrapper{
         padding: 10px 30px;
         display: flex;
         align-items: center;
-        a{
+        .nav-link{
             display: flex;
             justify-content: center;
             align-items: center;
@@ -33,7 +27,7 @@
                 }
         }
         .left{
-            flex: 0.5;
+            flex: 0.1;
             display:flex;
             align-items:center;
             @include mobile{
@@ -92,7 +86,7 @@
             }
         }
         .right{
-            flex: 0.5;
+            flex: 0.3;
             display:flex;
             align-items:center;
             justify-content:flex-end;
