--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -1,7 +1,7 @@
 .form-container {
   max-width: 600px;
+  width: 100%;
   margin: 25px auto;
-  height: auto;
   background-color: #f2f2f2;
   padding: 20px;
   input{
