--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,112 +1,58 @@
 @import "../../global.scss";
 
-.topBar{
+
+.navbar{
+    height: 65px;
+    display: flex;
     width: 100%;
-    height: 90px;
-    //transparency bakground
-    background-color: rgba(78, 61, 61, 0.9);
-    position: fixed;
-    top: 0;
-    z-index: 3;
-    color: rgb(248, 248, 248);
-    overflow:hidden;
-    transition: all 0.3s ease-in-out;
-    .wrapper{
-        padding: 10px 30px;
+    max-width:100%;  /* added */
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #fff;
+    color: #000;
+    background-color: #fff;
+    ul{
         display: flex;
-        align-items: center;
-        a{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-            padding: 0;
-            color: inherit;
-            font-size:40px;
-                font-weight:600;
+        list-style: none;
+        margin: 0 auto;
+        .navbar-item{
+            margin-left: 20px;
+            transition: border-bottom 0.5s ease-in-out;
+            &.active, &:hover{
+                color: rgb(143, 128, 128);
+                cursor: pointer;
+                border-bottom: 2px solid #fff;
+            }
+            a{
+                color: #fff;
                 text-decoration: none;
-                //Agarra el color del pariente fierro
-                color: inherit;
-                margin-right: 30px;
-                @include mobile{
-                    margin:0px;
-                }
-        }
-        .left{
-            flex: 0.5;
-            display:flex;
-            align-items:center;
-            @include mobile{
-                justify-content: space-between;
-            }
-            .logo{
-                font-size:40px;
-                font-weight:600;
-                text-decoration: none;
-                //Agarra el color del pariente fierro
-                color: inherit;
-                margin-right: 30px;
-                @include mobile{
-                    margin:0px;
-                }
-            }
-            #iconContainer{
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-left: 60px;
-                @include mobile{
-                    margin-right:10px;
-                    margin-left:30px;
-                }
-               
-            }
-            .itemContainer {
-                display:flex;
-                align-items: center;
-                margin-left: 20px;
-                @include mobile{
-                    display:none;
-                }
-                .icon{
-                    font-size:25px;
-                    margin-right: 10px;
-                    display: flex;
-                    justify-content:center;
-                    align-items:center;
-                }
-                #icon{
-                    display: flex;
-                    justify-content:center;
-                    align-items:center;
-                }
-                #linkedInIcon{
-                    font-size:33px;
-                }
-                
-                span{
-                    font-size:15;
-                    font-weight: 300;
-                    
+
+                &:hover{
+                    color: #fff;
+                    text-decoration: none;
                 }
             }
         }
-        .right{
-            flex: 0.5;
-            display:flex;
-            align-items:center;
-            justify-content:flex-end;
-            .link{
-                font-size:15px;
-                font-weight: 300;
-                margin-right: 30px;
-                @include mobile{
-                    margin-right:0px;
-                }
-                
-            }
-        }
-    
-        
     }
+    .navbar-logo{
+        font-size: 2rem;
+        margin-left:80px;
+    }
+    .hamburger{
+        margin-right: 80px;
+        display: none;
+        .hamburger-inner, 
+        .hamburger-inner::before, 
+        .hamburger-inner::after{
+            background-color: #fff;
+        }
+    }
+}
+
+// responsive mobile
+@include mobile  {
+    .navbar{
+        background-color: red;
+    }
+    
 }
