--- a/src/components/Ubicacion/Ubicacion.scss
+++ b/src/components/Ubicacion/Ubicacion.scss
@@ -1,10 +1,10 @@
+@import "../../global.scss";
+
 .como-llegar-container{
-    height: 40vh;
-    width: 100%;
     display: flex;
+    width: 100%;
+    height: calc(100vh - 65px);
     flex-direction: column;
-    align-items: center;
-    background-color: green;
     h1{
         font-size: 2.8rem;
         font-weight: bold;
@@ -12,10 +12,14 @@
     }
     .map-text-container{
         display: flex;
-        margin-left: auto;
-        margin-right: auto;
+        flex-direction: column;
         .left{
             flex: 0.5;
+            .map-text-map{
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+                height: 300px;
+                width: 80%;
+            }
 
         }
         .right{
@@ -30,18 +34,31 @@
             }
         }
         .iframe-rwd {
-            width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
             
-            iframe {
-                top: 0;
-                left: 0;
-                
-            }
         }
 
 
     }
 }    
+
+@include mobile{
+    .como-llegar-container{
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        height: calc(100vh - 65px);
+        h1{
+            
+        }
+        .left{
+            flex: 0.5;
+            .map-text-map{
+                height: 50px;
+                width: 50px;
+            }
+        }
+    }
+}
